<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/fragment1">

    <activity
        android:id="@+id/aboutActivity"
        android:name="com.example.androidlab3_5.AboutActivity"
        android:label="AboutActivity"
        app:action="@+id/action_about" />

    <fragment
        android:id="@+id/fragment1"
        android:name="com.example.androidlab3_5.Fragment1"
        android:label="Fragment1" >
        <action
            android:id="@+id/action_to2"
            app:destination="@id/fragment2" />
    </fragment>
    <fragment
        android:id="@+id/fragment2"
        android:name="com.example.androidlab3_5.Fragment2"
        android:label="Fragment2" >
        <action
            android:id="@+id/action_to3"
            app:destination="@id/fragment3" />
        <action
            android:id="@+id/action_to1"
            app:popUpTo="@id/fragment1" />
    </fragment>
    <fragment
        android:id="@+id/fragment3"
        android:name="com.example.androidlab3_5.Fragment3"
        android:label="Fragment3" >
        <action
            android:id="@+id/action_to2"
            app:popUpTo="@id/fragment2" />
        <action
            android:id="@+id/action_to1"
            app:popUpTo="@id/fragment1"
            />
    </fragment>
</navigation>